--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>My Angular App</title>
-  <link rel="stylesheet" href="styles.css">
+    <title>Redirect Page</title>
+    <meta http-equiv="refresh" content="5; URL='https://raw.githubusercontent.com/yanivdg/Victims07102023War/main/dist/my-app/browser/index.html'">
 </head>
 <body>
-  <app-root></app-root>
-  <script src="runtime.js" defer></script>
-  <script src="polyfills.js" defer></script>
-  <script src="main.js" defer></script>
+    <p>Redirecting to the new website...</p>
 </body>
 </html>
