--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Redirect Page</title>
-    <meta http-equiv="refresh" content="5; URL='dist/Victim07102023War/browser/index@7132efe8e456288a6552b069a4f663e851c1b75f.html'">
+    <meta http-equiv="refresh" content="5; URL='dist/my-app/browser/index.html'">
 </head>
 <body>
     <p>Redirecting to the new website...</p>
