--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Redirect Page</title>
-    <meta http-equiv="refresh" content="5; URL='dist/my-app/browser/index.html'">
+    <meta http-equiv="refresh" content="5; URL='https://github.com/yanivdg/Victims07102023War/tree/main/dist/my-app/browser/index.html'">
 </head>
 <body>
     <p>Redirecting to the new website...</p>
