--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Redirect Page</title>
-    <meta http-equiv="refresh" content="5; URL='https://raw.githubusercontent.com/yanivdg/Victims07102023War/main/dist/my-app/browser/index.html'">
+    <meta http-equiv="refresh" content="5; URL='https://raw.githubusercontent.com/yanivdg/Victims07102023War/main/dist/my-app/browser/index.html'" sandbox="allow-scripts">
                                                 
 </head>
 <body>
