--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Redirect Page</title>
-    <meta http-equiv="refresh" content="5; URL='https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/index.html'">
+    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0;url=https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/index.html">
 </head>
 <body>
     <p>Redirecting to the new website...</p>
