--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en" data-critters-container>
 <head>
-    <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0;url=https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/index.html">
+  <meta charset="utf-8">
+  <title>Victims07102023War</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/favicon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/styles-5INURTSO.css">
 </head>
 <body>
-    <p>Redirecting to the new website...</p>
+  <app-root></app-root>
+  <script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/polyfills-LZBJRJJE.js" type="module"></script>
+  <script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/main-5M52S2PO.js" type="module"></script>
 </body>
 </html>
