updating angular and python

--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-<!doctype html>
-<html lang="en" data-critters-container>
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>War Victims 07-10-2023</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/favicon.ico">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/styles-5INURTSO.css">
+  <title>Original HTML</title>
 </head>
 <body>
-  <p>17122023_0100</p>
-  <app-root></app-root>
-  <script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/polyfills-LZBJRJJE.js" type="module"></script>
-  <script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/main-7CJOMNY3.js" type="module"></script>
+  <div id="content">
+    <h1></h1>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
