--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en" data-critters-container>
 <head>
-  <title>Original HTML</title>
-  <p>21122023_2223</p>
-</head>
+  <meta charset="utf-8">
+  <title>Victims07102023War</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles-5INURTSO.css"></head>
 <body>
-  <div id="content">
-    <h1></h1>
-  </div>
-  <script src="script.js"></script>
-</body>
+  <app-root></app-root>
+<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-QR2DIBI7.js" type="module"></script></body>
 </html>
