Add files: description

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en" data-critters-container>
 <head>
   <meta charset="utf-8">
-  <title>War Victims 07-OCT-2023(ver.22122023_0209)</title>
+  <title>Victims07102023War</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/favicon.ico">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/styles-5INURTSO.css"></head>
 <body>
   <app-root></app-root>
-<script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/polyfills-LZBJRJJE.js" type="module"></script><script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/main-QR2DIBI7.js" type="module"></script></body>
+<script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/polyfills-LZBJRJJE.js" type="module"></script><script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/main-X2PNNRW5.js" type="module"></script></body>
 </html>
