--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -8,7 +8,7 @@
   margin: 10px;
 }
 </style>
-<body><p font-family="Arial" style="font-size:2vw;color:red;">Total Kidnapped: 121</p>
+<p font-family="Arial" style="font-size:2vw;color:red;">Total Kidnapped: 121</p>
 <p font-family="Arial" style="font-size:2vw;color:black;">Kidnapped Murdered: 21</p>
 <p font-family="Arial" style="font-size:2vw;color:#FFD700;">Kidnapped Alive: 100</p>
 
@@ -617,6 +617,4 @@
 <img src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
 <figcaption style="font-family: Arial, sans-serif; font-size: 30px;">KetSiegel קית' סיגל</figcaption>
 </figure>
-
 </div>
-</body></html>
