fast fix to python html

--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -6,6 +6,8 @@
  }
 .image-container img {
   margin: 10px;
+  max-width: 50%; /* Reduce the maximum width of all images to 50% */
+  height: auto; /* Maintain aspect ratio */
 }
 </style>
 <body><p font-family="Arial" style="font-size:2vw;color:red;">Kidnapped: 121</p>
