--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -4,7 +4,8 @@
   display: flex;
    flex-wrap: wrap;
  }
-.image-container img {max-width: 10;
+.image-container img {
+ max-width: 10;
  height: auto;
 }
 </style>
