--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" data-critters-container>
 <head>
-  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
   <title>War Victims 07-OCT-2023(ver.23122023_1525)</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
