--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -9,6 +9,9 @@
  height: auto;
 }
 </style>
+<head>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <body><p font-family="Arial" style="font-size:2vw;color:red;">Kidnapped: 121</p>
 <p font-family="Arial" style="font-size:2vw;color:black;">Kidnapped Murdered: 21</p>
 <p font-family="Arial" style="font-size:2vw;color:#FFD700;">Kidnapped Alive: 100</p>
