--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
   <title>War Victims 07-OCT-2023(ver.23122023_1525)</title>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/favicon.ico">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/styles-5INURTSO.css"></head>
+</head
 <body>
-  <app-root></app-root>
-<script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/polyfills-LZBJRJJE.js" type="module"></script><script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/main-4KARCNN7.js" type="module"></script></body>
+<script src="script.js"></script>
+</body>
 </html>
+  
