--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head
 <body>
+<div id="content">
+    <!-- Content will be loaded here -->
+</div>
 <script src="script.js"></script>
 </body>
 </html>
