--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<!doctype html>
-<html lang="en" data-critters-container>
+<!DOCTYPE html>
+
+<html data-critters-container="" lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
-  <title>War Victims 07-OCT-2023(ver.23122023_1525)</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/favicon.ico">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/styles-5INURTSO.css"></head>
+<meta charset="utf-8"/>
+<title>War victims 07-OCT-2023(ver.23122023_2305)</title>
+<base href="/"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<link href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/favicon.ico" rel="icon" type="image/x-icon"/>
+<link href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/styles-5INURTSO.css" rel="stylesheet"/></head>
 <body>
-  <app-root></app-root>
-<script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/polyfills-LZBJRJJE.js" type="module"></script><script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/main-4KARCNN7.js" type="module"></script></body>
+<app-root></app-root>
+<script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/polyfills-LZBJRJJE.js" type="module"></script><script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/main-QW6J55B6.js" type="module"></script></body>
 </html>
