last changes added

--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -3,38 +3,40 @@
  .image-container {
   display: flex;
    flex-wrap: wrap;
- }
-.image-container img {
- max-width: 10;
+margin: 0; 
+}
+.image-container img {max-width: 10px;
  height: auto;
 }
 </style>
-<head>
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
 <body><p font-family="Arial" style="font-size:2vw;color:red;">Kidnapped: 121</p>
 <p font-family="Arial" style="font-size:2vw;color:black;">Kidnapped Murdered: 21</p>
 <p font-family="Arial" style="font-size:2vw;color:#FFD700;">Kidnapped Alive: 100</p>
 
 <div class="image-container">
 <figure>
-<img src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">KetSiegel קית' סיגל</figcaption>
+<img src="https://img.mako.co.il//2023/11/05/JudyWeinstein.jpg" alt="ג'ודי וינשטיין-חגי" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">JudyWeinstein ג'ודי וינשטיין-חגי</figcaption>
 </figure>
 
 <figure>
-<img src="https://img.mako.co.il//2023/11/05/YairHoren.jpg" alt="יאיר הורן" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">YairHoren יאיר הורן</figcaption>
+<img src="https://img.mako.co.il/2023/11/05/GadiHagai.jpg" alt="גדי חגי ז"ל" style="border: 20px solid black; border-radius: 0; box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">GadiHagai גדי חגי ז"ל</figcaption>
 </figure>
 
 <figure>
-<img src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">EitanHoran איתן הורן</figcaption>
+<img src="https://img.mako.co.il//2023/11/05/YoramMetzger.jpg" alt="יורם מצגר" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">YoramMetzger יורם מצגר</figcaption>
 </figure>
 
 <figure>
-<img src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">MatanTsengaukar מתן צנגאוקר</figcaption>
+<img src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">SashaTrupanov סשה (אלכסנדר) טרופנוב</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/TamirAdar.jpg" alt="תמיר אדר" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">TamirAdar תמיר אדר</figcaption>
 </figure>
 
 <figure>
@@ -58,53 +60,18 @@
 </figure>
 
 <figure>
-<img src="https://img.mako.co.il//2023/11/05/FernandoMarman.jpg" alt="פרננדו מרמן" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">FernandoMarman פרננדו מרמן</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il///2023/11/05/LuisHerrNarberto.jpg" alt="נורברטו לואיס הר" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">LuisHerrNarberto נורברטו לואיס הר</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il//2023/11/05/IlanVais.jpg" alt="אילן  וייס" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">IlanVais אילן  וייס</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il//2023/11/05/OferCalderon.jpg" alt="עופר קלדרון" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">OferCalderon עופר קלדרון</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">OdedLifshitz עודד ליפשיץ</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il//2023/11/05/AmiramCooper.jpg" alt="עמירם קופר" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">AmiramCooper עמירם קופר</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il//2023/11/05/GaliBerman.jpg" alt="גלי ברמן" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">GaliBerman גלי ברמן</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il//2023/11/05/ZivBerman.jpg" alt="זיו ברמן" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">ZivBerman זיו ברמן</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">SashaTrupanov סשה (אלכסנדר) טרופנוב</figcaption>
-</figure>
-
-<figure>
 <img src="https://img.mako.co.il//2023/11/05/AvivAzili.jpg" alt="אביב אצילי ז"ל" style="border: 20px solid black; border-radius: 0; box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);">
 <figcaption style="font-family: Arial, sans-serif; font-size: 20px;">AvivAzili אביב אצילי ז"ל</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/RavidKatz.jpg" alt="רביד כץ ז"ל" style="border: 20px solid black; border-radius: 0; box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">RavidKatz רביד כץ ז"ל</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/GadiMozes.jpg" alt="גדי מוזס" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">GadiMozes גדי מוזס</figcaption>
 </figure>
 
 <figure>
@@ -128,28 +95,8 @@
 </figure>
 
 <figure>
-<img src="https://img.mako.co.il//2023/11/05/RavidKatz.jpg" alt="רביד כץ ז"ל" style="border: 20px solid black; border-radius: 0; box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">RavidKatz רביד כץ ז"ל</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il//2023/11/05/GadiMozes.jpg" alt="גדי מוזס" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">GadiMozes גדי מוזס</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il/2023/11/05/YairJacob.jpg" alt="יאיר יעקב" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">YairJacob יאיר יעקב</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il//2023/11/05/YoramMetzger.jpg" alt="יורם מצגר" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">YoramMetzger יורם מצגר</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il//2023/11/05/EladKazir.jpg" alt="אלעד קציר" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">EladKazir אלעד קציר</figcaption>
+<img src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">MatanTsengaukar מתן צנגאוקר</figcaption>
 </figure>
 
 <figure>
@@ -158,8 +105,18 @@
 </figure>
 
 <figure>
-<img src="https://img.mako.co.il//2023/11/05/TamirAdar.jpg" alt="תמיר אדר" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">TamirAdar תמיר אדר</figcaption>
+<img src="https://img.mako.co.il//2023/11/05/CarmelGat.jpg" alt="כרמל גת" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">CarmelGat כרמל גת</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/IlanVais.jpg" alt="אילן  וייס" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">IlanVais אילן  וייס</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/NadavPoplewell.jpg" alt="נדב פופלוול" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">NadavPoplewell נדב פופלוול</figcaption>
 </figure>
 
 <figure>
@@ -173,38 +130,8 @@
 </figure>
 
 <figure>
-<img src="https://img.mako.co.il//2023/11/05/IgavBuhshtev.jpg" alt="יגב בוכשטב" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">IgavBuhshtev יגב בוכשטב</figcaption>
-</figure>
-
-<figure>
 <img src="https://img.mako.co.il//2023/11/05/DrorOr.jpg" alt="דרור אור" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
 <figcaption style="font-family: Arial, sans-serif; font-size: 20px;">DrorOr דרור אור</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il//2023/11/05/JudyWeinstein.jpg" alt="ג'ודי וינשטיין-חגי" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">JudyWeinstein ג'ודי וינשטיין-חגי</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il/2023/11/05/GadiHagai.jpg" alt="גדי חגי ז"ל" style="border: 20px solid black; border-radius: 0; box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">GadiHagai גדי חגי ז"ל</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il//2023/11/05/CarmelGat.jpg" alt="כרמל גת" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">CarmelGat כרמל גת</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il//2023/11/05/YosefHamisZiadna.jpg" alt="יוסף חמיס אלזיאדנה" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">YosefHamisZiadna יוסף חמיס אלזיאדנה</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il//2023/11/05/HamzaZiadna.jpg" alt="חמזה אלזיאדנה" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">HamzaZiadna חמזה אלזיאדנה</figcaption>
 </figure>
 
 <figure>
@@ -573,18 +500,8 @@
 </figure>
 
 <figure>
-<img src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">OhadYaahalomi אוהד יהלומי</figcaption>
-</figure>
-
-<figure>
 <img src="https://img.mako.co.il/2023/12/01/margalit.jfif" alt="אליהו מרגלית ז"ל" style="border: 20px solid black; border-radius: 0; box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);">
 <figcaption style="font-family: Arial, sans-serif; font-size: 20px;">margalit אליהו מרגלית ז"ל</figcaption>
-</figure>
-
-<figure>
-<img src="https://img.mako.co.il//2023/11/05/NadavPoplewell.jpg" alt="נדב פופלוול" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">NadavPoplewell נדב פופלוול</figcaption>
 </figure>
 
 <figure>
@@ -598,13 +515,58 @@
 </figure>
 
 <figure>
-<img src="https://img.mako.co.il//2023/11/05/RonenEngel.jpg" alt="רונן אנגל ז"ל" style="border: 20px solid black; border-radius: 0; box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">RonenEngel רונן אנגל ז"ל</figcaption>
+<img src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">KetSiegel קית' סיגל</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/FernandoMarman.jpg" alt="פרננדו מרמן" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">FernandoMarman פרננדו מרמן</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il///2023/11/05/LuisHerrNarberto.jpg" alt="נורברטו לואיס הר" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">LuisHerrNarberto נורברטו לואיס הר</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/GaliBerman.jpg" alt="גלי ברמן" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">GaliBerman גלי ברמן</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/ZivBerman.jpg" alt="זיו ברמן" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">ZivBerman זיו ברמן</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/AmiramCooper.jpg" alt="עמירם קופר" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">AmiramCooper עמירם קופר</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/YosefHamisZiadna.jpg" alt="יוסף חמיס אלזיאדנה" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">YosefHamisZiadna יוסף חמיס אלזיאדנה</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/HamzaZiadna.jpg" alt="חמזה אלזיאדנה" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">HamzaZiadna חמזה אלזיאדנה</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/OhadBenAmi.jpg" alt="אוהד בן עמי" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">OhadBenAmi אוהד בן עמי</figcaption>
 </figure>
 
 <figure>
 <img src="https://img.mako.co.il//2023/11/05/TalShoham.jpg" alt="טל שוהם" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
 <figcaption style="font-family: Arial, sans-serif; font-size: 20px;">TalShoham טל שוהם</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">OdedLifshitz עודד ליפשיץ</figcaption>
 </figure>
 
 <figure>
@@ -618,8 +580,43 @@
 </figure>
 
 <figure>
-<img src="https://img.mako.co.il//2023/11/05/OhadBenAmi.jpg" alt="אוהד בן עמי" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
-<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">OhadBenAmi אוהד בן עמי</figcaption>
+<img src="https://img.mako.co.il/2023/11/05/YairJacob.jpg" alt="יאיר יעקב" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">YairJacob יאיר יעקב</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/EladKazir.jpg" alt="אלעד קציר" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">EladKazir אלעד קציר</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/IgavBuhshtev.jpg" alt="יגב בוכשטב" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">IgavBuhshtev יגב בוכשטב</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">OhadYaahalomi אוהד יהלומי</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/OferCalderon.jpg" alt="עופר קלדרון" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">OferCalderon עופר קלדרון</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/RonenEngel.jpg" alt="רונן אנגל ז"ל" style="border: 20px solid black; border-radius: 0; box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">RonenEngel רונן אנגל ז"ל</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/YairHoren.jpg" alt="יאיר הורן" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">YairHoren יאיר הורן</figcaption>
+</figure>
+
+<figure>
+<img src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן" style="border: 10px solid #FFD700; border-radius: 50%; box-shadow: 0 0 10px #FFD700;">
+<figcaption style="font-family: Arial, sans-serif; font-size: 20px;">EitanHoran איתן הורן</figcaption>
 </figure>
 
 </div>
