--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html data-critters-container="" lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>War victims 07-OCT-2023(ver.28122023_M)</title>
+<title>War victims 07-OCT-2023(ver.28122023_1405)</title>
 <base href="/"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <link href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/styles-5INURTSO.css" rel="stylesheet"/></head>
 <body>
 <app-root></app-root>
+<script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/https://www.youtube.com/iframe_api"></script>
 <script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/polyfills-LZBJRJJE.js" type="module"></script><script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/main-MFLYIGD3.js" type="module"></script></body>
 </html>
