--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html data-critters-container="" lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>War victims 07-OCT-2023(ver.29122023_2119)</title>
-<base href="/Victims07102023War/"/>
+<title>War victims 07-OCT-2023(ver.31122023_1649)</title>
+<base href="/"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <link href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/styles-5INURTSO.css" rel="stylesheet"/></head>
 <body>
 <app-root></app-root>
 <script src="https://www.youtube.com/iframe_api"></script>
-<script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/polyfills-LZBJRJJE.js" type="module"></script><script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/main-M475C5HP.js" type="module"></script></body>
+<script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/polyfills-LZBJRJJE.js" type="module"></script><script src="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/main-ESKKJ7KC.js" type="module"></script></body>
 </html>
