--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html data-critters-container="" lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>War victims 07-OCT-2023(ver.03012024_2214)</title>
-<base href="/"/>
+<title>War victims 07-OCT-2023(ver.03012024_2220)</title>
+<base href="/Victims07102023War/"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <link href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="https://cdn.jsdelivr.net/gh/yanivdg/Victims07102023War@main/dist/my-app/browser/styles-5INURTSO.css" rel="stylesheet"/></head>
